[package]
name = "speedtest-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
cfspeedtest = { git = "https://github.com/deanrock/cfspeedtest", branch = "expose-measurement-fields" }
prometheus_exporter = "0.8.5"
reqwest = "0.11.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
